# Vulkan-Rasterizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
_autogen/: foundation.slang.dep  foundation.slang.h  sky_simple.slang.dep  sky_simple.slang.h  tonemapper.slang.dep  tonemapper.slang.h
_bin/Debug/: Vulkan-Rasterizer.ini  log_Vulkan-Rasterizer.txt
cmake/: RtTutorial.cmake
common/: gltf_utils.cpp  gltf_utils.hpp  io_gltf.h  rt_base.hpp  utils.cpp  utils.hpp
common/shaders/: foundation.slang  gltf_accessor.h.slang  light.h.slang  pbr.h.slang  ray_common.h.slang  shaderio.h  shadow.h.slang
